--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/erczo/dendro-noaa-pot/issues"
   },
-  "homepage": "https://github.com/erczo/dendro-noaa-pot#readme"
+  "homepage": "https://github.com/erczo/dendro-noaa-pot#readme",
+  "dependencies": {
+    "xml2js": "^0.4.17"
+  }
 }
