Add fs to package.json

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/erczo/dendro-noaa-pot#readme",
   "dependencies": {
+    "fs": "0.0.1-security",
     "xml2js": "^0.4.17"
   }
 }
