--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/erczo/dendro-noaa-pot#readme",
   "dependencies": {
     "fs": "0.0.1-security",
-    "xml2js": "^0.4.17"
+    "xml2js": "^0.4.17",
+    "xmldom": "^0.1.27"
   }
 }
