--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/erczo/dendro-noaa-pot#readme",
   "dependencies": {
     "fs": "0.0.1-security",
+    "moment": "^2.18.1",
     "xml2js": "^0.4.17",
     "xmldom": "^0.1.27"
   }
